fix about gap

--- a/components/About/AboutItem/aboutitem.module.scss
+++ b/components/About/AboutItem/aboutitem.module.scss
@@ -10,7 +10,7 @@
    @media (max-width: 1150px) {
       display: flex;
       flex-direction: column;
-      gap: 1.4rem;
+      gap: 0.8rem;
       margin-left: 50px;
    }
 
